--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.0.6",
     "grapesjs": "^0.22.5",
     "grapesjs-preset-webpage": "^1.0.3",
     "next": "15.1.7",
