Add custom device icons and hide default device buttons

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "grapesjs": "^0.22.5",
     "grapesjs-custom-code": "^1.0.2",
     "grapesjs-preset-webpage": "^1.0.3",
